crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@extern_fn_wrong_arg_count_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/extern_fn_wrong_arg_count_fail.tapir
---
Error: Incorrect number of argumets for function compute, expected 2 arguments but got 1.
   ╭─[ extern_fn_wrong_arg_count_fail.tapir:3:9 ]
   │
 1 │ extern fn compute(a: int, b: fix) -> fix;
   │           ───┬───  
   │              ╰───── Expected 2 arguments
   │ 
 3 │ var x = compute(3);
   │         ─────┬────  
   │              ╰────── Got 1 arguments
───╯
